<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/menu_context_add_favorite" android:title="@string/menu_addStar" />
    <item android:id="@id/menu_context_remove_favorite" android:title="@string/menu_removeStar" />
    <item android:id="@id/menu_context_call" android:title="@string/menu_callNumber" />
    <item android:id="@id/menu_context_send_message" android:title="@string/menu_send_message" />
    <item android:id="@id/menu_context_send_email" android:title="@string/menu_send_email" />
    <item android:id="@id/menu_context_copy_to_dialling_screen" android:title="@string/menu_copy_to_dialing" />
    <item android:id="@id/menu_context_share_contact_information" android:title="@string/menu_share_contact_info" />
    <item android:id="@id/menu_context_add_to_reject_list_favourite" android:title="@string/add_2_block_list" />
    <item android:id="@id/menu_context_share_namecard_via_favorite" android:title="@string/menu_share_namecard_via" />
    <item android:id="@id/menu_context_print_namecard_favorite" android:title="@string/menu_print_namecard" />
    <item android:id="@id/menu_place_on_home_screen_favorite" android:title="@string/menu_place_on_home_screen" />
</menu>