<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:id="@id/photo_container_root" android:background="@drawable/contacts_quick_name_bg" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:id="@id/photo" android:background="?android:selectableItemBackground" android:layout_width="128.0dip" android:layout_height="128.0dip" android:scaleType="centerCrop" android:contentDescription="@string/viewContactDesription" />
        <RelativeLayout android:gravity="center_vertical" android:id="@id/photo_container" android:layout_width="fill_parent" android:layout_height="128.0dip">
            <ImageButton android:id="@id/open_details_push_layer" android:background="?android:selectableItemBackground" android:layout_width="fill_parent" android:layout_height="fill_parent" android:contentDescription="@string/viewContactDesription" />
            <TextView android:textSize="22.0dip" android:textColor="@color/tw_contact_detail_list_primary" android:ellipsize="marquee" android:gravity="top|left|center" android:id="@id/name" android:paddingLeft="14.0dip" android:paddingTop="14.0dip" android:paddingRight="14.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/quick_contact_name_text_bar_height" android:singleLine="true" />
            <TextView android:textSize="17.0sp" android:textColor="@*android:color/secondary_text_light" android:ellipsize="end" android:id="@id/status" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="-3.0dip" android:singleLine="true" />
            <TextView android:textSize="15.0sp" android:textColor="@*android:color/secondary_text_light" android:ellipsize="end" android:id="@id/timestamp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="-2.0dip" android:singleLine="true" />
            <ImageView android:id="@id/presence" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="15.0dip" android:scaleType="centerInside" />
            <Button android:textSize="19.0dip" android:textColor="@color/tw_color142" android:ellipsize="end" android:layout_gravity="center" android:id="@id/create_contact" android:background="@drawable/btn_quick_contacts" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="15.0dip" android:layout_marginTop="18.0dip" android:layout_marginRight="15.0dip" android:layout_marginBottom="72.0dip" android:text="@string/create_contact" android:singleLine="true" />
            <Button android:textSize="19.0dip" android:textColor="@color/tw_color142" android:ellipsize="end" android:layout_gravity="center" android:id="@id/update_contact" android:background="@drawable/btn_quick_contacts" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="15.0dip" android:layout_marginTop="72.0dip" android:layout_marginRight="15.0dip" android:layout_marginBottom="18.0dip" android:text="@string/update_existing" android:singleLine="true" />
        </RelativeLayout>
    </LinearLayout>
</merge>